2025CR220	3/18/2025	MikeR	Feature	DISC Group Report

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -635,85 +635,31 @@ gent.Female=Female
 gent.NonBinary=Non-Binary
 gent.PreferNotToSay=Prefer not to Say
 
-
 g.AIMs=Personality Characteristics (relates to fit with the job/team environment)
 g.AIMsC=Personality Characteristics:
 g.AIMsShrt=Personality Characteristics
 g.AIs=Artificial Intelligence (AI)-Derived
+g.Activities=Activities
 g.All=All
 g.AllBatteries=All Batteries
-g.AllTests=All Tests
 g.AllTestTakers=Global
 g.AllTestTakersApprox=Global (Estimated)
+g.AllTests=All Tests
+g.AltIdentifier=Identifier
 g.Amount=Amount
-
+g.Assessment=Assessment
 g.AverageScore=Average Score
 g.AverageScoreBatt=Avg Battery Score
 g.AverageSeconds=Average Seconds
 g.BatteryCompletions=Battery Completions
 g.BatteryStarts=Battery Starts
 g.BatteryTestKeysCreated=Battery Test Keys Created
-g.CandidateCreditsAccessed=Unique Candidate Credits Accessed
-g.CandidateCreditsAccessedNote=** A Candidate Credit provides for unlimited testing, reference checks, and video interviews for a single candidate over a period of 90 days. The values above represent the number of unique candidate credits that were accessed during the report period, which is equivalent to the number of unique candidates processed during the period. These credits may have been charged prior to the start of this period.  
-g.Completed=Completed
-g.Count=Count
-g.Created=Created
-g.CreditId=Credit Id
-g.CreditsUsed=Credits Used
-
-g.CustomTitleX=Custom Competency Group {0}
-
-g.Department=Department
-g.DoesNotIncludeTestBatteriesThatIncludeThisTest=Please note that the 'Test Keys Created' value does not include test batteries that include this test within the battery. This means that if this test is administered via a test battery, the Test Keys Created value will be less than the number of test starts.  Also, when reconciling test keys created against test starts or completions, please note that a test key is like a <u>ticket</u> to take a test and can be created in an older period and still result in a test event start/test completion in the report period. Finally, Test Starts refers to tests that were <u>started</u> in the report period and Tests Completed refers to tests <u>completed</u> in the report period. Sometimes a test is started but not completed in a period, or vice versa.
-g.DropoffAccessed=Accessed
-g.DropoffKeysCreated=Authorized
-g.DropoffRate=Completion Rate
-g.DropoffStartedTestEvent=Started Test
-g.DropoffTestCompleted=Completed Test
-g.DropoffTestCompletedBatt=Completed Battery
-g.Email=Email
-g.ExpirationDate=Expiration Date
-g.FullOrganization=Total Org
-g.FirstUsed=First Used
-g.Group=Group
-g.InitialAmount=Initial Amount
-g.LastUsed=Last Used
-g.LimitedSample=
-g.Name=Name
-g.None=None
-g.NoSuborgAssigned=No Group Assigned
-
-g.Org=Organization
-g.PageX=Page {0}
-g.Phone=Phone
-g.RcDbCreates=Checks Created
-g.RcDbCCompletes=Checks Completed
-g.RcDbCandStarts=Candidate Starts
-g.RcDbCandCompletes=Candidate Completions
-g.RcDbRtrCreates=Rater Creates
-g.RcDbRtrStarts=Rater Starts
-g.RcDbRtrCompletes=Rater Completions
-g.RemainingAmount=Remaining Amount
-
-g.Started=Started
-g.Status=Status
-g.TestCompletions=Tests Completed
-g.TestKeysAndTestStartsDifferences=When reconciling test keys created during this period against test starts or completions, please note that a Test Key is like a <u>ticket</u> to take a test or a test battery, rather than the test event itself. A Test Key can be created in an older period from this report and still result in a test event start/test completion that is within this period. Additionally, if the test key is for a test battery, rather than a single test, it can result in multiple tests over time. Also note that a test can be started in a previous period but finished in the report period, or it can started in the report period and finished after the report period.
-g.TestKeysCreated=Test Keys Created
-g.TestStarts=Test Starts
-g.TestTakerStatusBySuborg=Test Taker Status by Sub-Organization
-g.UserLogons=User Logins
-
-
-
 g.BiodataC=Past Behaviors:
 g.BiodataShrt=Past Behaviors
 g.BiographicaData=Behavioral History (relates to performance and turnover)
 g.BiographicaDataC=Behavioral History:
-
-g.CogAbilities=Abilities (relates to job performance, problem solving, ability to learn, etc.)
-g.CogAbilitiesShrt=Abilities
-g.Correct=Correct
+g.CandidateCreditsAccessed=Unique Candidate Credits Accessed
+g.CandidateCreditsAccessedNote=** A Candidate Credit provides for unlimited testing, reference checks, and video interviews for a single candidate over a period of 90 days. The values above represent the number of unique candidate credits that were accessed during the report period, which is equivalent to the number of unique candidates processed during the period. These credits may have been charged prior to the start of this period.  
 g.CaveatGeneralTopic=General
 g.CaveatOneTopicName=Correct Count
 g.CaveatXofYCorrect={2} of {3} Correct
@@ -722,25 +668,54 @@ g.CaveatXofYCorrectNoOf={2} Correct
 g.CaveatXofYCorrectWithPartial={2} of {3} Correct ({4} Partially Correct)
 g.CaveatXofYCorrectWithPartialNoCorrect={2} of {3} ({4} Partial)
 g.CaveatXofYCorrectWithPartialNoOf={2} Correct ({4} Partially Correct)
-
+g.CogAbilities=Abilities (relates to job performance, problem solving, ability to learn, etc.)
+g.CogAbilitiesShrt=Abilities
+g.Completed=Completed
+g.Correct=Correct
+g.Count=Count
+g.Created=Created
+g.CreditId=Credit Id
+g.CreditsUsed=Credits Used
+g.Custom1=Custom Field 1
+g.Custom2=Custom Field 2
+g.Custom3=Custom Field 3
+g.CustomTitleX=Custom Competency Group {0}
+g.Cvr2ImportantNote=Important Note
+g.Cvr2Overall=Overall Score
+g.Cvr2Percentile=Comparison Matrix
+g.Cvr2WhatsIncluded=What's Included
 g.DashboardActivityByBattery=Activity by Test Battery
 g.DashboardActivityBySuborg=Test Activity by Organizational Group
 g.DashboardActivityBySuborgByBattery=Test Battery Activity by Organizational Group
-g.DashboardActivityBySuborgRc=Reference Check Activity by Organizational Group
 g.DashboardActivityBySuborgLv=Live Video Interview Activity by Organizational Group
+g.DashboardActivityBySuborgRc=Reference Check Activity by Organizational Group
 g.DashboardActivityBySuborgResultCredits=Candidate Credits Accessed by Organizational Group
 g.DashboardActivityByTest=Activity by Test
 g.DashboardDropOffRateInfo=Test Completion Rate Information
-g.DashboardDropOffRateInfoBatt=Battery Completion Rate Information
 g.DashboardDropOffRateInfo2=<u>Authorized</u> means a Test Key was created for this test (only). Note that Test Keys for batteries are not included in completion rate calculations. <u>Accessed</u> means the Candidate clicked on the link to begin the testing process, which starts with several preliminary screens. <u>Started Test</u> means the candidate actually started the test. <u>Completed Test</u> means the candidate completed the test. The final <u>Completion Rate</u> is the percentage of tests started by a participant that were completed. Note that if more than 1,000 test keys for a specific test were created during the report period, only the first 1,000 are analyzed in this table.
-
-
-
-
+g.DashboardDropOffRateInfoBatt=Battery Completion Rate Information
 g.Date=Date
+g.Dates=Dates
+g.Department=Department
+g.DiscGroupCoverDescrip=The DISC assessment measures key factors related to behavioral tendencies and individual work styles. This report includes a one-page summary, followed by detailed results. Please note that these results are not intended to serve as a predictor of job performance. For a well-rounded evaluation, consider pairing this tool with other assessments in our catalog.
+g.DiscGroupLevelReport.content=<p>Dear {0},</p><p>Your DISC Group-Level Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.DiscGroupLevelReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.DiscGroupLevelReport.subject=HR Avatar DISC Group-Level Report
+g.DoesNotIncludeTestBatteriesThatIncludeThisTest=Please note that the 'Test Keys Created' value does not include test batteries that include this test within the battery. This means that if this test is administered via a test battery, the Test Keys Created value will be less than the number of test starts.  Also, when reconciling test keys created against test starts or completions, please note that a test key is like a <u>ticket</u> to take a test and can be created in an older period and still result in a test event start/test completion in the report period. Finally, Test Starts refers to tests that were <u>started</u> in the report period and Tests Completed refers to tests <u>completed</u> in the report period. Sometimes a test is started but not completed in a period, or vice versa.
+g.DropoffAccessed=Accessed
+g.DropoffKeysCreated=Authorized
+g.DropoffRate=Completion Rate
+g.DropoffStartedTestEvent=Started Test
+g.DropoffTestCompleted=Completed Test
+g.DropoffTestCompletedBatt=Completed Battery
 g.Duration=Duration
-
 g.EQs=Emotional IQ
+g.Email=Email
+g.ExpirationDate=Expiration Date
+g.FirstUsed=First Used
+g.FullOrganization=Total Org
+g.Group=Group
+g.GroupScoresBreakdown=Group Score Breakdown
 g.HighRisk=High Risk
 g.ImgCapRisk=Risk:
 g.ImgCapRiskHigh=High risk of cheating based on image inconsistencies
@@ -749,30 +724,55 @@ g.ImgCapRiskLow=Low risk of cheating based on image inconsistencies
 g.ImgCapRiskMedium=Medium risk of cheating based on image inconsistencies
 g.ImgCapTimout=Timeout
 g.Incorrect=Incorrect
+g.IndividualScores=Individual Scores
+g.InitialAmount=Initial Amount
 g.InvalidEmailAddress=Please enter a valid email address and try again.
 g.ItemScoresCompetencyTitle={0} ({1})
-
 g.KSAsC=Knowledge, Skills, and Abilities:
 g.KSs=Knowledge and Skills (relates to immediate readiness)
 g.KSsShrt=Knowledge and Skills
-g.LowRisk=Low Risk
-
+g.KeyActions=Key Actions
 g.LVScript=Interview Script
-
+g.LastUsed=Last Used
+g.LearnMore=Learn More
+g.LimitedSample=Limited Sample
+g.LowRisk=Low Risk
 g.MediumRisk=Medium Risk
-
+g.Members=Members
+g.NOTES=NOTES
+g.Name=Name
+g.NextSteps=Next Steps
 g.No=No
-
+g.NoSuborgAssigned=No Group Assigned
+g.None=None
+g.Notes=Notes
+g.Org=Organization
+g.OrgAutoTest=Multi-Admin Link
+g.OrgJusticeReport.content=<p>Dear {0},</p><p>Your Organizational Justice Feedback Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.OrgJusticeReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.OrgJusticeReport.subject=Organizational Justice Feedback Report
+g.Overall=Overall
+g.PageX=Page {0}
 g.PartiallyCorrect=Partially Correct
 g.PassThru={0}
 g.PctEstZ=estimated
-
 g.PerformanceDate=Performance Info Date
-
+g.Phone=Phone
+g.Product=Product
 g.Rating=Rating
 g.RatingNameX=Response Rating {0} Name
 g.RatingX=Rating {0}
-
+g.RcDbCCompletes=Checks Completed
+g.RcDbCandCompletes=Candidate Completions
+g.RcDbCandStarts=Candidate Starts
+g.RcDbCreates=Checks Created
+g.RcDbRtrCompletes=Rater Completions
+g.RcDbRtrCreates=Rater Creates
+g.RcDbRtrStarts=Rater Starts
+g.RemainingAmount=Remaining Amount
+g.ResultViews=Online Views
+g.ResultsOverview=Results Overview
+g.ScoreBreakdown=Score Breakdown
 g.ScoreCatInterpGreen=Strength in this area is likely to enhance job performance.
 g.ScoreCatInterpGreenKnldg=Should achieve superior job performance in this area with little or no training.
 g.ScoreCatInterpRed=Deficiency or weakness in this area may impact job performance. Additional probing recommended.
@@ -785,59 +785,53 @@ g.ScoreCatInterpYellow=Scores suggest neither strength nor weakness in this area
 g.ScoreCatInterpYellowGreen=Strength in this area is likely to enhance job performance.
 g.ScoreCatInterpYellowGreenKnldg=Should achieve above average job performance with little or no training in this area.
 g.ScoreCatInterpYellowKnldg=Appears capable of average job performance will little or no training in this area.
-
 g.ScoredSurvey=Scored Survey
+g.Scores=Scores
+g.ScoresByName=Scores - by Name
+g.ScoresByStyle=Scores - by Style
 g.Self=Self
-
-g.SystemError=A system error has occurred that has prevented this action. The error message is: {0}
-
-g.StdLiveVideoReport.content=<p>Dear {0},</p><p>Your Live Video Interview Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
-g.StdLiveVideoReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
-g.StdLiveVideoReport.subject=HR Avatar Live Video Interview Report
-
-g.StdRefCheckReport.content=<p>Dear {0},</p><p>Your Reference Check Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
-g.StdRefCheckReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
-g.StdRefCheckReport.subject=HR Avatar Reference Check Report
-
-g.OrgJusticeReport.content=<p>Dear {0},</p><p>Your Organizational Justice Feedback Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
-g.OrgJusticeReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
-g.OrgJusticeReport.subject=Organizational Justice Feedback Report
-
-g.RatingX=Rating {0}
-g.ResultViews=Online Views
-
-g.StdRefCheckReferralsReport.content=<p>Dear {0},</p><p>Your Reference Check Referrals Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
-g.StdRefCheckReferralsReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
-g.StdRefCheckReferralsReport.subject=HR Avatar Reference Check Referrals Report
-
-
+g.Started=Started
+g.Status=Status
 g.StdActivityReport.content=<p>Dear {0},</p><p>Your Activity Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdActivityReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p>
 g.StdActivityReport.subject=HR Avatar Activity Report
-
 g.StdCreditUsageReport.content=<p>Dear {0},</p><p>Your Credit Usage Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdCreditUsageReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
 g.StdCreditUsageReport.subject=HR Avatar Credit Usage Report
 g.StdCreditUsageReport.subject.warning=LOW CREDITS WARNING for HR Avatar
-
-
+g.StdLiveVideoReport.content=<p>Dear {0},</p><p>Your Live Video Interview Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.StdLiveVideoReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.StdLiveVideoReport.subject=HR Avatar Live Video Interview Report
+g.StdRefCheckReferralsReport.content=<p>Dear {0},</p><p>Your Reference Check Referrals Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.StdRefCheckReferralsReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.StdRefCheckReferralsReport.subject=HR Avatar Reference Check Referrals Report
+g.StdRefCheckReport.content=<p>Dear {0},</p><p>Your Reference Check Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.StdRefCheckReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.StdRefCheckReport.subject=HR Avatar Reference Check Report
 g.StdResultReport.content=<p>Dear {0},</p><p>Your Result Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdResultReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
 g.StdResultReport.subject=HR Avatar Result Report
-
 g.StdUnfinishedTestKeyReport.content=<p>Dear {0},</p><p>Your Unfinished Test Key is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
 g.StdUnfinishedTestKeyReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
 g.StdUnfinishedTestKeyReport.subject=HR Avatar Unfinished Test Key Report
-
-
+g.Style=Style
+g.Suborg=Department
+g.SystemError=A system error has occurred that has prevented this action. The error message is: {0}
 g.SystemErrorUnk=Unknown system error.
-
+g.TestCompletions=Tests Completed
+g.TestKeysAndTestStartsDifferences=When reconciling test keys created during this period against test starts or completions, please note that a Test Key is like a <u>ticket</u> to take a test or a test battery, rather than the test event itself. A Test Key can be created in an older period from this report and still result in a test event start/test completion that is within this period. Additionally, if the test key is for a test battery, rather than a single test, it can result in multiple tests over time. Also note that a test can be started in a previous period but finished in the report period, or it can started in the report period and finished after the report period.
+g.TestKeysCreated=Test Keys Created
+g.TestStarts=Test Starts
 g.TestTakerPerfNameDefaultX=Performance Value {0}
+g.TestTakerStatusBySuborg=Test Taker Status by Sub-Organization
+g.TmBldActivities=Team-Building Activities
 g.TooManyFailedLogonAttempts=Sign in attempts have been temporarily disabled. Please wait 30 minutes and try again. If you continue to have difficulty, please contact us.
-
+g.TotalParticipants=Total Participants
 g.UsageEndDate=Usage End Date (UTC)
+g.UserLogons=User Logins
 g.Yes=Yes
 g.YouAreNotAuthorizedForAction=You are not authorized.
+g.ofgroup=of group
 
 
 georegion.africa=Africa
