--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,16 @@
             <version>3.0.0</version>
         </dependency>
         
+
+        <!-- https://mvnrepository.com/artifact/org.knowm.xchart/xchart -->
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>3.8.8</version>
+        </dependency>
+
+         
+        
     </dependencies>
     
     <build>
