2025CR220	3/18/2025	MikeR	Feature	DISC Group Report

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -671,6 +671,7 @@ g.CaveatXofYCorrectWithPartialNoOf={2} Correct ({4} Partially Correct)
 g.CogAbilities=Abilities (relates to job performance, problem solving, ability to learn, etc.)
 g.CogAbilitiesShrt=Abilities
 g.Completed=Completed
+g.copyrightforreport=Copyright {0}, {1}, Inc. All Rights Reserved.
 g.Correct=Correct
 g.Count=Count
 g.Created=Created
@@ -818,6 +819,7 @@ g.Style=Style
 g.Suborg=Department
 g.SystemError=A system error has occurred that has prevented this action. The error message is: {0}
 g.SystemErrorUnk=Unknown system error.
+g.Teamwork=Teamwork
 g.TestCompletions=Tests Completed
 g.TestKeysAndTestStartsDifferences=When reconciling test keys created during this period against test starts or completions, please note that a Test Key is like a <u>ticket</u> to take a test or a test battery, rather than the test event itself. A Test Key can be created in an older period from this report and still result in a test event start/test completion that is within this period. Additionally, if the test key is for a test battery, rather than a single test, it can result in multiple tests over time. Also note that a test can be started in a previous period but finished in the report period, or it can started in the report period and finished after the report period.
 g.TestKeysCreated=Test Keys Created
