2025CR283	4/11/2025	MikeR	Feature	Leadership Styles Group Report

--- a/src/main/resources/com/tm2batch/resources/TM2Messages.properties
+++ b/src/main/resources/com/tm2batch/resources/TM2Messages.properties
@@ -22,6 +22,8 @@ brctn.StdLvi=Live Video Interview Results Report (Excel)
 brctn.StdRc=Reference Check Results Report (Excel)
 brctn.StdRcReferrals=Reference Check Referrals Report (Excel)
 brctn.UminnOrgJustice=Organizational Justice Feedback Report
+brctn.LeaderStyleGroup=Leadership Style Group Report
+brctn.DiscGroup=DISC Group Report
 
 
 bt.blackberry=Blackberry
@@ -727,6 +729,7 @@ g.ImgCapTimout=Timeout
 g.Incorrect=Incorrect
 g.IndividualScores=Individual Scores
 g.InitialAmount=Initial Amount
+g.Interpretation=Interpretation
 g.InvalidEmailAddress=Please enter a valid email address and try again.
 g.ItemScoresCompetencyTitle={0} ({1})
 g.KSAsC=Knowledge, Skills, and Abilities:
@@ -735,6 +738,13 @@ g.KSsShrt=Knowledge and Skills
 g.KeyActions=Key Actions
 g.LVScript=Interview Script
 g.LastUsed=Last Used
+
+g.LeaderStyleGroupCoverDescrip=The Leadership Style Assessment is designed to provide current leaders with meaningful insight into their dominant leadership approach. By evaluating behaviors, decision-making patterns, and other key leadership traits, the assessment helps identify the leadership style that most closely reflects each individual's current practices.
+g.LeaderStyleGroupReport.content=<p>Dear {0},</p><p>Your Leadership Style Group-Level Report is attached.</p><p>Report Name: {1}</p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p><p>Thank you for using HR Avatar</p><p>The HR Avatar Customer Service Team</p>
+g.LeaderStyleGroupReport.contentsupp=<br /><p>Additional Info: </p><p>Dates Covered: {3} thru {4}</p><p>Records Found: {2}</p>
+g.LeaderStyleGroupReport.subject=HR Avatar Leadership Style Group-Level Report
+
+
 g.LearnMore=Learn More
 g.LimitedSample=Limited Sample
 g.LowRisk=Low Risk
@@ -760,6 +770,7 @@ g.PctEstZ=estimated
 g.PerformanceDate=Performance Info Date
 g.Phone=Phone
 g.Product=Product
+g.Purpose=Purpose
 g.Rating=Rating
 g.RatingNameX=Response Rating {0} Name
 g.RatingX=Rating {0}
