--- a/zzapplication.conf
+++ b/zzapplication.conf
@@ -25,6 +25,10 @@ Uminn_OrgJustice_Dev=true
 discProductIds=944
 discGroupReportId=57
 
+leaderStyleProductIds=947
+leaderStyleGroupReportId=61
+
+
 
 
 
